fix alignment dashboard

--- a/client/src/components/Admin/admin.scss
+++ b/client/src/components/Admin/admin.scss
@@ -1,10 +1,10 @@
 .ADMIN{
    
-    .center {
+    .center3 {
         position: absolute;
         display: block;
         top: 50%;
-        left: 62%;
+        left: 67%;
         -webkit-transform: translate(-50%, -50%);
                 transform: translate(-50%, -50%);
         width: 70vw;
